--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>you are</p>
       <p><div id="age" class="flip-clock"></div></p>
       <p>years old</p>
-      <p><a id="reset" class="button" href="/">reset</a></p>
+      <p><a id="reset" class="button" href="/howoldami">reset</a></p>
     </div>
 
   </div>
